; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_unpack-objects.c_unpack_non_delta_entry.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_unpack-objects.c_unpack_non_delta_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dry_run = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i32)* @unpack_non_delta_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unpack_non_delta_entry(i32 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i64, i64* %5, align 8
  %9 = call i8* @get_data(i64 %8)
  store i8* %9, i8** %7, align 8
  %10 = load i32, i32* @dry_run, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %21, label %12

12:                                               ; preds = %3
  %13 = load i8*, i8** %7, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %12
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %4, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i32 @write_object(i32 %16, i32 %17, i8* %18, i64 %19)
  br label %24

21:                                               ; preds = %12, %3
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @free(i8* %22)
  br label %24

24:                                               ; preds = %21, %15
  ret void
}

declare dso_local i8* @get_data(i64) #1

declare dso_local i32 @write_object(i32, i32, i8*, i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
